-changement dans tous les fichiers html des menus : simplification du nommage des class pour les images; -modifications dans menu.scss : suppression du sélecteur return qui était en trop, modification des sélecteurs pour les images suite aux changements intervenus dans les fichiers html, utilisation d'une mixin pour les propriétés d'affichage de l'image utilisée en arrière plan dans la version desktop, diminution des délais pour les animations, modification des pixels en rem pour la propriété translate permettant de décaler les menus, utilisation d'une mixin pour les dimensions et des titre et paragraphes des menus rognés avec la propriété ellipsis, et suppression du sélecteur footer et de sa règle qui sont déplacés dans le fichier container.scss; -mise en forme du fichier button_action.scss; -changement dans button_like.scss : le délai de l'animation est raccourci; -modifications dans loader.scss : les durées et délais de l'animation sont raccourcis; -changements dans mixins.scss : création de deux mixins, l'une concernant l'affichage de l'image en arrière plan des menus pour la version desktop, l'autre concernant les règles de dimension et  rognage des titres et paragraphes des menus.

--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -10,10 +10,10 @@
     position: fixed;
     top: 0;
     background-color: $colour-tertiary;
-    animation: opacity 3000ms 3000ms both;
-    -webkit-animation: opacity 3000ms 3000ms both;
-
-    &__heading {
+    animation: opacity 1000ms 2100ms both;
+    -webkit-animation: opacity 1000ms 2100ms both;
+    &__heading
+{
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -106,20 +106,20 @@
 
 .loader-dots div:nth-child(1) {
     left: 2rem;
-    animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
-    -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+    animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
+    -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
 }
 
 .loader-dots div:nth-child(2) {
     left: 6rem;
-    animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
-    -webkit-animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+    animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
+    -webkit-animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
 }
 
 .loader-dots div:nth-child(3) {
     left: 10rem;
-    animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
-    -webkit-animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+    animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
+    -webkit-animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
 }
 
 @keyframes pulsar {
