--- a/main.css
+++ b/main.css
@@ -126,13 +126,13 @@ p {
 .button-action {
   display: inline-block;
   width: 60%;
+  height: 3.5rem;
   text-align: center;
   font-size: 1rem;
   color: white;
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   margin: 1rem 0 4rem 0;
   cursor: pointer;
-  height: 3.5rem;
   border-radius: 45px 45px;
   -webkit-border-radius: 45px 45px;
   -moz-border-radius: 45px 45px;
@@ -234,11 +234,11 @@ p {
   -moz-transform: scale(0);
   -ms-transform: scale(0);
   -o-transform: scale(0);
-  transition: transform 400ms ease-in-out;
-  -webkit-transition: transform 400ms ease-in-out;
-  -moz-transition: transform 400ms ease-in-out;
-  -ms-transition: transform 400ms ease-in-out;
-  -o-transition: transform 400ms ease-in-out;
+  transition: transform 300ms ease-in-out;
+  -webkit-transition: transform 300ms ease-in-out;
+  -moz-transition: transform 300ms ease-in-out;
+  -ms-transition: transform 300ms ease-in-out;
+  -o-transition: transform 300ms ease-in-out;
 }
 
 .btn {
@@ -272,8 +272,8 @@ p {
   position: fixed;
   top: 0;
   background-color: #99E2D0;
-  animation: opacity 3000ms 3000ms both;
-  -webkit-animation: opacity 3000ms 3000ms both;
+  animation: opacity 1000ms 2100ms both;
+  -webkit-animation: opacity 1000ms 2100ms both;
 }
 .loader__heading {
   display: flex;
@@ -360,20 +360,20 @@ p {
 
 .loader-dots div:nth-child(1) {
   left: 2rem;
-  animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
-  -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+  animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 5) 2;
+  -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 5) 2;
 }
 
 .loader-dots div:nth-child(2) {
   left: 6rem;
-  animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
-  -webkit-animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+  animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 5) 2;
+  -webkit-animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 5) 2;
 }
 
 .loader-dots div:nth-child(3) {
   left: 10rem;
-  animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
-  -webkit-animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+  animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 5) 2;
+  -webkit-animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 5) 2;
 }
 
 @keyframes pulsar {
@@ -452,6 +452,10 @@ header {
     top: 6rem;
     opacity: 0.95;
   }
+}
+
+footer {
+  position: relative;
 }
 
 footer {
@@ -845,7 +849,7 @@ footer {
   margin: 2rem;
   font-size: 1.5rem;
 }
-.header-menu__return.logo {
+.header-menu .logo {
   position: relative;
   width: auto;
 }
@@ -855,28 +859,20 @@ footer {
   }
 }
 
-.heading-image-first-dimension {
+.heading-image {
   width: 100%;
   height: auto;
   min-height: 15rem;
   position: absolute;
   overflow: hidden;
 }
-.heading-image-first-dimension__restaurant-img {
+.heading-image__first-dimension {
   position: absolute;
   width: 100%;
   height: 114%;
   object-fit: cover;
 }
-
-.heading-image-second-dimension {
-  width: 100%;
-  height: auto;
-  min-height: 15rem;
-  position: absolute;
-  overflow: hidden;
-}
-.heading-image-second-dimension__restaurant-img {
+.heading-image__second-dimension {
   position: absolute;
   width: 100%;
   height: 110%;
@@ -884,10 +880,9 @@ footer {
 }
 
 @media all and (min-width: 992px) {
-  .heading-image-first-dimension,
-.heading-image-first-dimension__restaurant-img,
-.heading-image-second-dimension,
-.heading-image-second-dimension__restaurant-img {
+  .heading-image,
+.heading-image__first-dimension,
+.heading-image__second-dimension {
     display: none;
   }
   .french-style--bg-page {
@@ -1003,17 +998,17 @@ footer {
   }
 }
 .menu__selection--first-apparition {
-  animation: first-apparition 1000ms 2900ms ease-in;
-  -webkit-animation: first-apparition 1000ms 2900ms ease-in;
+  animation: first-apparition 1000ms 1950ms ease-in;
+  -webkit-animation: first-apparition 1000ms 1950ms ease-in;
 }
 @keyframes first-apparition {
   0% {
     opacity: 0;
-    transform: translate(0, 25px);
-    -webkit-transform: translate(0, 25px);
-    -moz-transform: translate(0, 25px);
-    -ms-transform: translate(0, 25px);
-    -o-transform: translate(0, 25px);
+    transform: translate(0, 2.5rem);
+    -webkit-transform: translate(0, 2.5rem);
+    -moz-transform: translate(0, 2.5rem);
+    -ms-transform: translate(0, 2.5rem);
+    -o-transform: translate(0, 2.5rem);
   }
   95% {
     opacity: 0.2;
@@ -1029,17 +1024,17 @@ footer {
 }
 .menu__selection--second-apparition {
   transform-origin: bottom;
-  animation: second-apparition 1200ms 2950ms ease-in;
-  -webkit-animation: second-apparition 1200ms 2950ms ease-in;
+  animation: second-apparition 1200ms 1980ms ease-in;
+  -webkit-animation: second-apparition 1200ms 1980ms ease-in;
 }
 @keyframes second-apparition {
   0% {
     opacity: 0;
-    transform: translate(0, 25px);
-    -webkit-transform: translate(0, 25px);
-    -moz-transform: translate(0, 25px);
-    -ms-transform: translate(0, 25px);
-    -o-transform: translate(0, 25px);
+    transform: translate(0, 2.5rem);
+    -webkit-transform: translate(0, 2.5rem);
+    -moz-transform: translate(0, 2.5rem);
+    -ms-transform: translate(0, 2.5rem);
+    -o-transform: translate(0, 2.5rem);
   }
   95% {
     opacity: 0.2;
@@ -1055,17 +1050,17 @@ footer {
 }
 .menu__selection--third-apparition {
   transform-origin: bottom;
-  animation: third-apparition 1400ms 3000ms ease-in;
-  -webkit-animation: third-apparition 1400ms 3000ms ease-in;
+  animation: third-apparition 1400ms 1990ms ease-in;
+  -webkit-animation: third-apparition 1400ms 1990ms ease-in;
 }
 @keyframes third-apparition {
   0% {
     opacity: 0;
-    transform: translate(0, 25px);
-    -webkit-transform: translate(0, 25px);
-    -moz-transform: translate(0, 25px);
-    -ms-transform: translate(0, 25px);
-    -o-transform: translate(0, 25px);
+    transform: translate(0, 2.5rem);
+    -webkit-transform: translate(0, 2.5rem);
+    -moz-transform: translate(0, 2.5rem);
+    -ms-transform: translate(0, 2.5rem);
+    -o-transform: translate(0, 2.5rem);
   }
   95% {
     opacity: 0.2;
@@ -1081,17 +1076,17 @@ footer {
 }
 .menu__selection--fourth-apparition {
   transform-origin: bottom;
-  animation: fourth-apparition 1600ms 3010ms ease-in;
-  -webkit-animation: fourth-apparition 1600ms 3010ms ease-in;
+  animation: fourth-apparition 1600ms 2000ms ease-in;
+  -webkit-animation: fourth-apparition 1600ms 2000ms ease-in;
 }
 @keyframes fourth-apparition {
   0% {
     opacity: 0;
-    transform: translate(0, 25px);
-    -webkit-transform: translate(0, 25px);
-    -moz-transform: translate(0, 25px);
-    -ms-transform: translate(0, 25px);
-    -o-transform: translate(0, 25px);
+    transform: translate(0, 2.5rem);
+    -webkit-transform: translate(0, 2.5rem);
+    -moz-transform: translate(0, 2.5rem);
+    -ms-transform: translate(0, 2.5rem);
+    -o-transform: translate(0, 2.5rem);
   }
   95% {
     opacity: 0.2;
@@ -1269,10 +1264,6 @@ footer {
 .button-container {
   display: flex;
   justify-content: center;
-}
-
-footer {
-  position: relative;
 }
 
 /*# sourceMappingURL=main.css.map */
