--- a/main.css
+++ b/main.css
@@ -125,6 +125,7 @@ p {
 
 .button-action {
   display: inline-block;
+  position: relative;
   width: 60%;
   height: 3.5rem;
   text-align: center;
@@ -141,17 +142,12 @@ p {
   border: none;
   background: linear-gradient(to bottom, #FF79DA, #9356DC 95%);
   box-shadow: 0.5rem 0.2rem 1rem rgb(202, 198, 198);
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  transition: all 300ms;
-  transition: transform 300ms ease-in-out;
-  -webkit-transition: transform 300ms ease-in-out;
-  -moz-transition: transform 300ms ease-in-out;
-  -ms-transition: transform 300ms ease-in-out;
-  -o-transition: transform 300ms ease-in-out;
+  transition: background-color;
+  -webkit-transition: background-color;
+  -moz-transition: background-color;
+  -ms-transition: background-color;
+  -o-transition: background-color;
+  z-index: 1;
 }
 @media all and (min-width: 767px) {
   .button-action {
@@ -163,14 +159,30 @@ p {
     width: 18rem;
   }
 }
-.button-action:hover {
-  transform: scale(1.2, 1.1);
-  -webkit-transform: scale(1.2, 1.1);
-  -moz-transform: scale(1.2, 1.1);
-  -ms-transform: scale(1.2, 1.1);
-  -o-transform: scale(1.2, 1.1);
+.button-action:hover::after {
+  opacity: 1;
+}
+.button-action::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
   box-shadow: 1rem 1.2rem 2rem rgb(202, 198, 198);
-  background: linear-gradient(to bottom right, #ffa2e5 1%, #a978e3);
+  background: linear-gradient(to bottom right, #ff8de0 1%, #9e67e0);
+  border-radius: 45px 45px;
+  -webkit-border-radius: 45px 45px;
+  -moz-border-radius: 45px 45px;
+  -ms-border-radius: 45px 45px;
+  -o-border-radius: 45px 45px;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 400ms ease-in;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  -ms-transition: opacity 400ms ease-in;
+  -o-transition: opacity 400ms ease-in;
 }
 
 .like {
