--- a/sass/components/_button_action.scss
+++ b/sass/components/_button_action.scss
@@ -1,6 +1,7 @@
 .button-action {
     display: inline-block;
-    width: 60%; 
+    position: relative;
+    width: 60%;
     height: 3.5rem;
     text-align: center;
     font-size: 1rem;
@@ -16,17 +17,12 @@
     border: none;
     background: linear-gradient(to bottom, $colour-secondary, $colour-primary 95%);
     @include initial-shadow-element;
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transition: all 300ms;
-    transition: transform 300ms ease-in-out;
-    -webkit-transition: transform 300ms ease-in-out;
-    -moz-transition: transform 300ms ease-in-out;
-    -ms-transition: transform 300ms ease-in-out;
-    -o-transition: transform 300ms ease-in-out;
+    transition: background-color;
+    -webkit-transition: background-color;
+    -moz-transition: background-color;
+    -ms-transition: background-color;
+    -o-transition: background-color;
+    z-index: 1;
 
     @include tablette-only {
         width: 15rem;
@@ -37,13 +33,31 @@
     }
 
     &:hover {
-        transform: scale(1.2, 1.1);
-        -webkit-transform: scale(1.2, 1.1);
-        -moz-transform: scale(1.2, 1.1);
-        -ms-transform: scale(1.2, 1.1);
-        -o-transform: scale(1.2, 1.1);
-        box-shadow: 1rem 1.2rem 2rem $colour-shadow;
-        background: linear-gradient(to bottom right, lighten($colour-secondary, 8) 1%, lighten($colour-primary, 8));
+        &::after {
+            opacity: 1;
+        }
     }
 
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        box-shadow: 1rem 1.2rem 2rem $colour-shadow;
+        background: linear-gradient(to bottom right, lighten($colour-secondary, 4) 1%, lighten($colour-primary, 4));
+        border-radius: 45px 45px;
+        -webkit-border-radius: 45px 45px;
+        -moz-border-radius: 45px 45px;
+        -ms-border-radius: 45px 45px;
+        -o-border-radius: 45px 45px;
+        opacity: 0;
+        z-index: -1;
+        transition: opacity 400ms ease-in;
+        -webkit-transition: opacity 400ms ease-in;
+        -moz-transition: opacity 400ms ease-in;
+        -ms-transition: opacity 400ms ease-in;
+        -o-transition: opacity 400ms ease-in;
+    }
 }
